cnd.modelimpl/test/unit/data/goldenfiles/org/netbeans/modules/cnd/modelimpl/trace/FileModelTest/include_macro_expanding.cc.clank.err
FAILED INCLUDE: from include_macro_expanding.cc for:
	multiarch-i386-linux/wx-2.8/wx/defs.h
${origin}/include_macro_expanding.cc:11:10: fatal error: 'multiarch-i386-linux/wx-2.8/wx/defs.h' file not found
#include _MULTIARCH_MAKE_HEADER(i386,_MULTIARCH_HEADER)
         ^
